# RandAugment-JAX

./: README.md  pyproject.toml  requirements-torch-xla-tpu.txt  requirements-tpu.txt  setup.py
configs/: cifar10_baseline.yaml  cifar10_preact_resnet18_baseline.yaml  cifar10_preact_resnet18_randaugment.yaml  cifar10_randaugment.yaml  cifar10_torch_xla_baseline.yaml  cifar10_torch_xla_randaugment.yaml  fake_smoke.yaml  fake_torch_xla_smoke.yaml
scripts/: train_cifar10_randaugment_torch_xla_tpu.sh  train_cifar10_randaugment_tpu.sh
src/randaug_jax/: __init__.py  augment.py  config.py  data.py  models.py  torch_models.py  train.py  train_jax.py  train_torch_xla.py
